add todos. edit cache note

--- a/IT/кэширование.org
+++ b/IT/кэширование.org
@@ -1,6 +1,7 @@
 #+title: Кэширование
 
 [[https://www.youtube.com/watch?v=iLMlYgQoTIE][ссылка на видео]]
+https://habr.com/ru/articles/734660/
 
 * Зачем кэшировать
 + Сокращение времени отклика
@@ -52,57 +53,28 @@ AverageTime = DBAccessTime * CacheMissRate + CacheAccessTime
 ** cache aside
 Приложение само координирует запросы в кэш и решает куда и когда обращаться.
 *** Чтение
-+------+                      +-------+
-|      | 1. чтение из кэша    |       |
-|  A   | -------------------> |   C   |
-|  P   | 2. даные не нашли    |   A   |
-|  P   | <------------------- |   C   |
-|  L   | 5. обновили кэш      |   H   |
-|  I   | -------------------> |   E   |
-|  C   |                      +-------+
-|  A   |
-|  T   |                      +-------+
-|  I   | 3. читаем из БД      |       |
-|  O   | -------------------> |   D   |
-|  N   | 4. получаем данные   |   B   |
-|      | <------------------- |       |
-+------+                      +-------+
+#+ATTR_ORG: :width 600 :align left
+[[file:../att/read_aside.png]]
 
 *** Запись
-+------+                      +-------+
-|  A   | 3. Обн. кэша         | CACHE |
-|  P   | -------------------> |       |
-|  P   |                      +-------+
-|  L   |
-|      | 1. Сохраняем в базу  +-------+
-|      | -------------------> |       |
-|      | 2. Получаем ответ    |  DB   |
-|      | <------------------- |       |
-+------+                      +-------+
+#+ATTR_ORG: :width 600 :align left
+[[file:../att/write_aside.png]]
 
 ** cache through
-Сквозное кэширование - все запосы приложения проходят через кэш
+Сквозное кэширование - все запросы приложения проходят через кэш
+#+ATTR_ORG: :width 800 :align left
+[[file:../att/write_through.png]]
 
-+-----+                    +-----+                            +-----+
-|  A  | 1.читаем из кэша   |  C  | 2. если нет, читаем из БД  |     |
-|  P  | -----------------> |  A  | -------------------------> |  B  |
-|  P  |                    |  C  |                            |  D  |
-|  L  | 4. отдаём данные   |  H  | 3. сохраняем данные в кэш  |     |
-|     | <----------------- |  E  | <------------------------- |     |
-+-----+                    +-----+                            +-----+
+#+ATTR_ORG: :width 800 :align left
+[[file:../att/read_through.png]]
 
 "+": сервис работает только с кэшем
 "-": если кэш упадёт - то приложение не работает
+
 ** cache ahead
 Опережающее кэширование. Запросы на чтение всегда идут только в кэш, никогда не попадая в БД напрямую.
-
-+-----+                    +-----+                            +-----+
-|  A  | читаем из кэша     |  C  | периодически записываем    |     |
-|  P  | -----------------> |  A  | -------------------------> |  B  |
-|  P  |                    |  C  |                            |  D  |
-|  L  |  отдаём данные     |  H  |                            |     |
-|     | <----------------- |  E  |                            |     |
-+-----+                    +-----+                            +-----+
+#+ATTR_ORG: :width 800 :align left
+[[file:../att/cache_ahead.png]]
 
 "+": быстрое чтение и запись
 "-": если кэш упал, то ничего не работает и часть данных пропала
