edit caching note. add vim keys

--- a/IT/кэширование.org
+++ b/IT/кэширование.org
@@ -18,8 +18,16 @@ https://habr.com/ru/articles/734660/
 + =прогрев кэша= - наполнение кэша данными
 + =инвалидация= - удаление неактуальных данных из кэша
 
+* Метрики
+- =Объем памяти=, выделенной под кэш. Это базовый показатель, по которому можно судить, сколько используется ресурсов
+- =RPS чтения/записи= – количество операций чтения/записи за единицу времени. В обычной ситуации количество операций чтения должно быть в разы больше количества операций записи. Обратное соотношение свидетельствует о проблемах в работе кэша
+- =Количество элементов в кэше=. Его полезно знать в дополнение к объему памяти, чтобы обнаруживать большие записи
+- =Hit rate= – процент извлечения данных из кэша. Чем он ближе к 100%, тем лучше. Этот параметр буквально определяет то, насколько наш кэш полезен и эффективен
+- =Expired rate= – процент удаления записей по истечении TTL. Этот показатель помогает обнаружить проблемы с производительностью, вызванные большим количеством записей с одновременно истекшим TTL
+
+Eviction rate – процент вытеснения записей из кэша при достижении лимита используемой памяти. Важный показатель при выборе стратегий вытеснения, о которых мы поговорим чуть позже
 * Что нужно кэшировать, а что не нужно
-+ Если данные меняются часто, то кэшировать их не нужно
++ если данные меняются часто, то кэшировать их не нужно
 + если данные меняются редко, то нужно закэшировать
 + можно кэшировать ошибки и кэш-промахи
 
@@ -98,7 +106,7 @@ AverageTime = DBAccessTime * CacheMissRate + CacheAccessTime
 
 * Инвалидация данных
 + по TTL - основная проблема - выбор времени жизни
-+ JITTER - если записи становятся недействительными обновременно и большом количестве, то источник данных может пострадать (БД). Jitter - это случайная величина, которая добавляется к ttl.
++ JITTER - если записи становятся недействительными одновременно и большом количестве, то источник данных может пострадать (БД). Jitter - это случайная величина, которая добавляется к ttl.
 + thundering herb problem - резкий рост нагрузки на источник данных, когда много потоков/процессов/сервисов одновременно запрашивают данные и получают cache miss, а затем каждый из них выполняется запрос к БД. Решается блокировками и proxy.
 + Инвалидация по событию
 
