edit caching note

--- a/IT/кэширование.org
+++ b/IT/кэширование.org
@@ -11,12 +11,12 @@ https://habr.com/ru/articles/734660/
 + =НО= нужно держать нагрузку без кэша, он для ускорения ответа, а не для возможности работы.
 
 * Термины
-+ =cache miss= - промах, нужный ключ не найден
-+ =cache hit= - попадание, нужный ключ найден
-+ =hit ratio= - процент попаданий
-+ =горячий ключ= - ключ на который приходится бОльшая часть запросов
-+ =прогрев кэша= - наполнение кэша данными
-+ =инвалидация= - удаление неактуальных данных из кэша
+- =cache miss= - промах, нужный ключ не найден
+- =cache hit= - попадание, нужный ключ найден
+- =hit ratio= - процент попаданий
+- =горячий ключ= - ключ на который приходится бОльшая часть запросов
+- =прогрев кэша= - наполнение кэша данными
+- =инвалидация= - удаление неактуальных данных из кэша
 
 * Метрики
 - =Объем памяти=, выделенной под кэш. Это базовый показатель, по которому можно судить, сколько используется ресурсов
@@ -24,8 +24,8 @@ https://habr.com/ru/articles/734660/
 - =Количество элементов в кэше=. Его полезно знать в дополнение к объему памяти, чтобы обнаруживать большие записи
 - =Hit rate= – процент извлечения данных из кэша. Чем он ближе к 100%, тем лучше. Этот параметр буквально определяет то, насколько наш кэш полезен и эффективен
 - =Expired rate= – процент удаления записей по истечении TTL. Этот показатель помогает обнаружить проблемы с производительностью, вызванные большим количеством записей с одновременно истекшим TTL
+- =Eviction rate= – процент вытеснения записей из кэша при достижении лимита используемой памяти. Важный показатель при выборе стратегий вытеснения, о которых мы поговорим чуть позже
 
-Eviction rate – процент вытеснения записей из кэша при достижении лимита используемой памяти. Важный показатель при выборе стратегий вытеснения, о которых мы поговорим чуть позже
 * Что нужно кэшировать, а что не нужно
 + если данные меняются часто, то кэшировать их не нужно
 + если данные меняются редко, то нужно закэшировать
@@ -57,6 +57,7 @@ AverageTime = DBAccessTime * CacheMissRate + CacheAccessTime
 - простой прогрев и простая логика инвалидации
 "-":
 - скорость работы
+
 * Способы взаимодействия с кэшем
 ** cache aside
 Приложение само координирует запросы в кэш и решает куда и когда обращаться.
