--- a/haskell/todo.org
+++ b/haskell/todo.org
@@ -1,2 +1,11 @@
 Some Haskell idioms we like
 https://exploring-better-ways.bellroy.com/some-haskell-idioms-we-like.html
+
+Building a gRPC Server in Haskell with Grapesy: A Practical Guide
+https://medium.com/%40kirill.borodylin/building-a-grpc-server-in-haskell-with-grapesy-a-practical-guide-d5be703a7077
+
+Задачки
+https://exercism.org/tracks/haskell
+
+"Five-Point Haskell"
+https://blog.jle.im/entry/five-point-haskell-part-1-total-depravity.html
