--- a/haskell/todo.org
+++ b/haskell/todo.org
@@ -9,3 +9,6 @@ https://exercism.org/tracks/haskell
 
 "Five-Point Haskell"
 https://blog.jle.im/entry/five-point-haskell-part-1-total-depravity.html
+
+туториал по змейке
+https://github.com/lsmor/snake-fury?tab=readme-ov-file#start-coding-building-a-mvp
