--- a/вакансии.org
+++ b/вакансии.org
@@ -767,3 +767,31 @@ Cлужебную сотовую связь.
 — Можешь самостоятельно организовать работу и выполнять задачи без постоянного контроля.
 — Легко находишь общий язык с людьми и умеешь понятно объяснять сложные вещи.
 Контакты: https://tochka.com/hr/it/middle-golang/
+
+* Ведущий разработчик Go (группа разработки платформенных сервисов)
+#удаленка #гибрид #lead
+Компания: БЮРО 1440
+Чем предстоит заниматься:
+-Проектированием и разработкой внутренних библиотек и фреймворков;
+-Разработкой внутренних инструментов для разработчиков;
+-Развитием и поддержкой общего фреймворка для микросервисов, улучшением интеграции микросервисов с инфраструктурой и их инструментированием;
+-Созданием продуктов as-a-Service;
+-Работой с командами как с заказчиками платформенных фичей;
+-Планированием и стратегическим развитием платформы;
+-Проведением внутренних митапов для разработчиков для анонса новых платформенных фичей и поддержания культуры разработки на высоком уровне.
+Что мы ожидаем:
+-Опыт разработки от 5 лет;
+-Опыт разработки на Go от 2-х лет;
+-Умение писать чистый, тестируемый код на Go;
+-Опыт работы с терминалом в Linux;
+-Понимание принципов обеспечения высокой доступности приложений, опыт в балансировщиках нагрузки и rate-limiter'ах;
+-Опыт работы с распределёнными системами (микросервисы, service discovery) и с соответствующими инструментами (LXC, Docker, orchestration systems);
+-Опыт работы с Postgres, Redis, Kafka, Docker, Kubernetes, gRPC + protobuf.
+Мы предлагаем:
+-Работу в аккредитованной ИТ-компании;
+-Шаг в космос - для тех, кто вдохновлен идеей покорения космоса и мечтает быть к этому причастным;
+-Возможность выбора формата работы (удаленно/гибрид);
+-Комфортный современный офис рядом с метро "улица 1905 года";
+-Оформление в соответствии с ТК РФ;
+-Конкурентный уровень заработной платы - на уровне лидеров ИТ/телеком-индустрии.
+Контакты: join@1440.space
