--- a/haskell/todo.org
+++ b/haskell/todo.org
@@ -12,3 +12,9 @@ https://blog.jle.im/entry/five-point-haskell-part-1-total-depravity.html
 
 туториал по змейке
 https://github.com/lsmor/snake-fury?tab=readme-ov-file#start-coding-building-a-mvp
+
+Monads, Applicatives & Functors
+https://slicker.me/haskell/monads_applicatives_functors.htm
+
+Non-strict semantics
+https://wiki.haskell.org/Non-strict_semantics
