--- a/План.md
+++ b/План.md
@@ -11,6 +11,8 @@ Clickhouse
 # K8s
 https://www.youtube.com/watch?v=TwyhnBDOHPw&t=2s
 
+# how-to-develop-perfect-crud
+https://github.com/beagreatengineer/how-to-develop-perfect-crud?tab=readme-ov-file#list-http-get
 
 # tarantool
 https://www.tarantool.io/ru/doc/latest/
